more seperatin asdasd :)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,14 +4,14 @@ project(fusion_vision)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(fusion_vision src/main.cpp
-        src/FileLogger.hpp
-        src/KinectDevice.hpp
+        include/FileLogger.hpp
+        include/KinectDevice.hpp
         src/FrameProcessor.cpp
         src/DisplayManager.cpp
         src/FileLogger.cpp
         src/KinectDevice.cpp
-        src/FrameProcessor.hpp
-        src/DisplayManager.hpp
+        include/FrameProcessor.hpp
+        include/DisplayManager.hpp
 )
 
 #add include
