--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,23 +4,18 @@ project(fusion_vision)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(fusion_vision src/main.cpp
-        include/logging/FileLogger.hpp
-        include/device/KinectDevice.hpp
-        src/image-processing/FrameProcessor.cpp
-        src/gui/DisplayManager.cpp
-        src/logging/FileLogger.cpp
-        src/device/KinectDevice.cpp
-        include/image-processing/FrameProcessor.hpp
-        include/gui/DisplayManager.hpp
-        include/core/SensorBase.hpp
-        include/core/DeviceManager.hpp
-        src/core/DeviceManager.cpp
-        include/utils/MathUtils.hpp
-        test/device/Kinect2DeviceTest.cpp
+)
+find_package(OpenGL REQUIRED)
+find_package(glfw3 REQUIRED)
+
+target_link_libraries(fusion_vision
+        ${OpenCV_LIBS}
+        ${FREENECT2_LIB}
 )
 
 #add include
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include
+        ${CMAKE_CURRENT_SOURCE_DIR}/lib)
 
 
 find_library(FREENECT2_LIBRARY freenect2 PATHS ${CMAKE_CURRENT_SOURCE_DIR}/lib)
