--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ project(fusion_vision)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(fusion_vision src/main.cpp
+        src/device/device.cpp
+        include/device/device.h
 )
 find_package(OpenGL REQUIRED)
 find_package(glfw3 REQUIRED)
