--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,13 +5,14 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(fusion_vision
         src/main.cpp
-        src/device/device.cpp
-        include/device/device.h
+        src/device/device_manager.cpp
+        include/device/device_manager.h
         include/logger/console_logger.h
         src/logger/console_logger.cpp
         include/logger/logger.h
         lib/libfreenect2/logger.h
         include/config/config.h
+        include/debug/status.h
 )
 find_package(OpenGL REQUIRED)
 find_package(glfw3 REQUIRED)
