--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "depends/boost"]
-	path = depends/boost
+[submodule "modules/boost"]
+	path = modules/boost
 	url = https://github.com/boostorg/boost
-[submodule "depends/poco"]
-	path = depends/poco
+[submodule "modules/poco"]
+	path = modules/poco
 	url = https://github.com/pocoproject/poco
